app/styles/_forms.less
.static-form-value-large {
  .h3();
  margin-top: 3px;
}

.copy-to-clipboard input.form-control:read-only {
  background-color: white;
  color: @text-color;
}

.copy-to-clipboard-multiline {
  position: relative;
  width: 100%;
  a {
    box-shadow: none;
    position: absolute;
    right: 0;
    top: 0;
  }
  pre {
    background-color: #fff;
    max-width: 100%;
    overflow-x: auto;
  }
}

.input-group-addon.wildcard-prefix {
  padding-left: 10px;
}

.editor-examples {
  padding: 19px;
  margin-bottom: 20px;
  border: 1px solid @color-pf-black-300;
}

.jenkinsfile-examples {
  p {
    // Show scrollbars as needed on small screens.
    overflow: auto;
  }
  .copy-to-clipboard {
    margin-top: 3px;
  }
}

.compute-resource {
  margin-bottom: 5px;
}

@media (max-width: @screen-xs-max) {
  .compute-resource .inline-select {
    // Spacing below input at mobile sizes.
    margin-top: 5px;
  }
}

.weight-slider-values {
  .flex-display(@display: flex);
  .flex-direction(@direction: column);
  .service-name {
    font-weight: 600;
  }
  .weight-percentage {
    font-size: 15px;
    margin-left: 5px;
  }
  @media (min-width: @screen-sm-min) {
    .flex-direction(@direction: row);
    justify-content: space-between;
    .weight-percentage {
      margin-right: 5px;
    }
  }
}

.osc-file-input textarea {
  font-family: @font-family-monospace;
  // Use the same spacing as `help-block` so the textarea is evenly spaced under the help text.
  margin: 5px 0;
}

.health-checks-form .pause-rollouts-checkbox,
.set-limits-form .pause-rollouts-checkbox {
  // Add extra margin on some forms so it's clear the checkbox is not part of
  // the sections just above.
  margin-top: @line-height-computed;
}

